--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celke - JavaScript Interno</title>
+    <title>Celke - JavaScript</title>
 </head>
 
 <body>
 
+
+    <script src="custom.js"></script>
 </body>
 
 </html>
