Como usar o FOR com JavaScript

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <h2>Listar os dados com FOR</h2>
+    <span id="listar"></span>
+
+    <h2>Listar os produtos com FOR</h2>
+    <span id="listar-produtos"></span>
+
+    <h2>Listar as caracteristicas do imóvel com FOR</h2>
+    <span id="listar-caract-imovel"></span>
 
     <script src="custom.js"></script>
 </body>
