Como enviar informações do JavaScript para o HTML

--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 </head>
 
 <body>
-    <h2>Listar os dados com FOR</h2>
-    <span id="listar"></span>
+    <h2>Enviar dados do JavaScript para o HTML através do ID - getElementByid</h2>
+    <span id="nome-usuario"></span><br>
 
-    <h2>Listar os produtos com FOR</h2>
-    <span id="listar-produtos"></span>
+    <h2>Enviar dados do JavaScript para o HTML através do Class - getElementsByClassName</h2>
+    <span class="turma-usuario"></span><br>
 
-    <h2>Listar as caracteristicas do imóvel com FOR</h2>
-    <span id="listar-caract-imovel"></span>
+    <h2>Enviar dados do JavaScript para o HTML através do Class - getElementsByClassName</h2>
+    <span class="turma-usuario"></span><br>
+
+    <h2>Enviar dados do JavaScript para o HTML através do Class - querySeletor</h2>
+    <span class="modulo"></span><br>
+
+    <h2>Enviar dados do JavaScript para o HTML através do IS - querySeletor</h2>
+    <span id="qnt-aula-visualisada"></span><br>
+
+    <h2>Verificar no JavaScript se existe o atributo com o seletor a página HTML. Enviar dados so JavaScript para o HTML através do ID - querySelector</h2>
+    <span id="sit-inscricao"></span><br>
 
     <script src="custom.js"></script>
 </body>
